# advent-of-code

./: add.zig  build.zig  solutions.zon  template.zig
day1/: build.zig
day1/src/: main.zig
day10/: build.zig.zon
day10/src/: main.zig
day11/: build.zig.zon
day11/src/: main.zig
day12/: build.zig
day12/src/: main.zig
day2/: build.zig  build.zig.zon
day2/src/: main.zig
day3/: build.zig  build.zig.zon
day3/src/: main.zig
day4/: build.zig
day4/src/: main.zig
day5/: build.zig  build.zig.zon
day5/src/: main.zig
day6/: build.zig  build.zig.zon
day6/src/: main.zig
day7/: build.zig
day7/src/: main.zig
day8/: build.zig  build.zig.zon
day8/src/: main.zig
day9/src/: main.zig
lib/: boilerplate.zig  parse.zig  root.zig
lua/: advent.lua  solvers.lua
ocaml/: .gitignore  advent.opam  dune-project
ocaml/add/: dune  main.ml
ocaml/lib/: advent.ml
ocaml/test/: dune
solutions/: solutions.zon
src/: CountingAllocator.zig  Parser.zig  Solutions.zig  counter.zig  hash.zig  main.zig  parse.zig  solutions.zig  solver.zig  test.zig  testing.zig
src/y15/: d01.zig  d02.zig  d03.zig  d04.zig  d05.zig  d06.zig  d07.zig  d08.zig  d09.zig  d10.zig  d11.zig  d12.zig  d13.zig  d14.zig  d15.zig  d16.zig  d17.zig  d18.zig  d19.zig  d20.zig  d21.zig  d22.zig  d23.zig  d24.zig  d25.zig
src/y16/: asm.zig  d01.zig  d02.zig  d03.zig  d04.zig  d05.zig  d06.zig  d07.zig  d08.zig  d09.zig  d10.zig  d11.zig  d12.zig  d13.zig  d14.zig  d15.zig  d16.zig  d17.zig  d18.zig  d19.zig  d20.zig  d21.zig  (+4 more)
zig/: add.zig  build.zig  build.zig.zon  template.zig
(+193 files in other folders)
